add html and new pages

--- a/index.html
+++ b/index.html
@@ -1,5 +1,23 @@
+<!DOCTYPE html>
 <html>
+  <header>
+    <link rel="stylesheet"; type="text/css"; href="stylesheets/default.css" />
+    <title>Ben Morimoto's Homepage</title>
+  </header>
   <body>
-    Hello DBC!
+    <div class="head">
+      <span class="headtitle">The Rustic Cabana</span>
+      <div class="socmed">
+        <span class="media"><a href="https://www.facebook.com/ben.morimoto.1"><img src="imgs/facebook.png" /></a></span>
+        <span class="media"><a href="https://twitter.com/benmorimoto"><img src="imgs/twitter.png" /></a></span>
+        <span class="media"><a href="https://github.com/bkmorimoto"><img src="imgs/github.png" /></a></span>
+      </div>
+      <br>
+      <span class="subhead">A site created for DBC students by DBC students</span>
+    </div>
+    <div id="buttons">
+      <a href="aboutme.html"><button type="submit" class="myButton">About Me</button></a>
+      <a href="blog/index.html"><button type="submit" class="myButton">Blog</button></a>
+      <a href="project-index.html"><button type="submit" class="myButton">Projects</button></a>
   </body>
 </html>
