--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     <div id="buttons">
       <a href="aboutme.html"><button type="submit" class="myButton">About Me</button></a>
       <a href="blog/index.html"><button type="submit" class="myButton">Blog</button></a>
-      <a href="project-index.html"><button type="submit" class="myButton">Projects</button></a>
+      <a href="projects/index.html"><button type="submit" class="myButton">Projects</button></a>
   </body>
 </html>
