--- a/aboutme.html
+++ b/aboutme.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <header>
+  <head>
+    <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
+    <meta charset="UTF-8">
     <title>About Ben Morimoto</title>
-  </header>
+  </head>
   <body>
     THIS IS MY BIO!
   </body>
