--- a/projects/index.html
+++ b/projects/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <header>
+  <head>
+    <link rel="stylesheet" type="text/css" href="../stylesheets/default.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/blog-stylesheet.css">
     <title>Project List</title>
-  </header>
+    <meta charset="UTF-8">
+  </head>
   <body>
     <h2>This is my list of projects</h2>
     <ul>
