--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <br>
       <span class="subhead">A site created for DBC students by DBC students</span>
     </div>
-    <form method="post" id="buttons">
+    <form id="buttons">
       <button type="submit" class="myButton" formaction="aboutme.html">About Me</button>
       <button type="submit" class="myButton" formaction="blog/index.html">Blog</button>
       <button type="submit" class="myButton" formaction="projects/index.html">Projects</button>
