GPS project updated

--- a/projects/index.html
+++ b/projects/index.html
@@ -2,14 +2,13 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="../stylesheets/default.css">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/blog-stylesheet.css">
     <title>Project List</title>
     <meta charset="UTF-8">
   </head>
   <body>
     <h2>This is my list of projects</h2>
     <ul>
-      <li>Project 1</li>
+      <li><a href="gps1-2.html">GPS 1.2 - Discussion of Pair Programming</a></li>
       <li>Project 2</li>
     </ul>
   </body>
