blog style updates

--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
     <title>Ben Morimoto's Homepage</title>
   </head>
   <body>
-    <div class="head">
-      <span class="headtitle">The Rustic Cabana</span>
-      <span class="socmed">
-        <span class="media"><a href="https://www.facebook.com/ben.morimoto.1"><img src="imgs/facebook.png" alt="Facebook" /></a></span>
-        <span class="media"><a href="https://twitter.com/benmorimoto"><img src="imgs/twitter.png" alt="Twitter" /></a></span>
-        <span class="media"><a href="https://github.com/bkmorimoto"><img src="imgs/github.png" alt="GitHub" /></a></span>
-      </span>
-      <br>
-      <span class="subhead">A site created for DBC students by DBC students</span>
+    <div class="home-header">
+      <div class="social-media">
+        <a href="https://www.facebook.com/ben.morimoto.1"><img src="imgs/facebook.png" alt="Facebook" /></a>
+        <a href="https://twitter.com/benmorimoto"><img src="imgs/twitter.png" alt="Twitter" /></a>
+        <a href="https://github.com/bkmorimoto"><img src="imgs/github.png" alt="GitHub" /></a>
+      </div>
+      <h1>The Rustic Cabana</h1>
+      <h3>A site created for DBC students by DBC students</h3>
     </div>
     <form id="buttons">
       <button type="submit" class="myButton" formaction="aboutme.html">About Me</button>
