--- a/projects/index.html
+++ b/projects/index.html
@@ -9,7 +9,7 @@
     <h2>This is my list of projects</h2>
     <ul>
       <li><a href="gps1-2.html">GPS 1.2 - Discussion of Pair Programming</a></li>
-      <li>Project 2</li>
+      <li><a href="cheat-sheet.html">Ruby Object Methods Cheat Sheet</a></li>
     </ul>
   </body>
 </html>
