--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <a href="https://twitter.com/benmorimoto"><img src="imgs/twitter.png" alt="Twitter" /></a>
         <a href="https://github.com/bkmorimoto"><img src="imgs/github.png" alt="GitHub" /></a>
       </div>
-      <h1>The Rustic Cabana</h1>
-      <h3>A site created for DBC students by DBC students</h3>
+      <h1>Ben Morimoto</h1>
+      <h3>Rogue One</h3>
     </div>
     <form id="buttons">
       <button type="submit" class="myButton" formaction="aboutme.html">About Me</button>
